--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "",
   "main": " test.js",
   "scripts": {
+    "test": "node test.js",
     "mild_1": "node src/mild/mild_1.js",
     "mild_2": "node src/mild/mild_2.js",
     "medium_1": "node src/medium/medium_1.js",
@@ -12,6 +13,9 @@
     "medium_3": "node src/medium/medium_3.js",
     "spicy_9": "node src/spicy/spicy_9.js"
   },
-  "author": "",
-  "license": "GPL-3.0-or-later"
+  "author": "Hunter Burkard",
+  "license": "GPL-3.0-or-later",
+  "dependencies": {
+    "esm": "^3.2.25"
+  }
 }
